--- a/navbar/style.css
+++ b/navbar/style.css
@@ -11,7 +11,6 @@ ul{
 }
 a{
     text-decoration: none;
-    color: antiquewhite;
 }
 
 
@@ -21,6 +20,9 @@ body{
 #nav-bar {
     background-color: #222;
     height: 100px;
+}
+a{
+    color: antiquewhite;
 }
 .nav-brand{
     vertical-align: top;
@@ -41,6 +43,6 @@ body{
 }
 .nav-user{
     vertical-align: top;
-    padding-left: 40px;
     padding-top: 30px;
+    padding-left: 20%;
 }
