--- a/landing copy/features.css
+++ b/landing copy/features.css
@@ -32,12 +32,33 @@ ul{
     font-weight: 400;
 }
 .features .row{
-    background-color: brown;
+    /* background-color: brown; */
     padding: 1em 0;
     font-size: .75em;
+    box-sizing: border-box;
 }
 .features .row h3{
     font-size: 1em;
+    position: relative;
+    /* background-color: brown; */
+    padding: 0.5em;
+}
+.features .row h3::after{
+    content: "x";
+    display: block;
+    background-color: white;
+    height: 3em;
+    width: 3em;
+    border-radius: 1.5em;
+    position: absolute;
+    right: -2.5em;
+    bottom: -2.5em;
+}
+.features ul:first-child h3::after{
+    right: -2.5em;
+}
+.features ul:last-child h3::after{
+    left: -2.5em;
 }
 .features .row figure{
     padding: 0 5%;
@@ -48,6 +69,42 @@ ul{
 }
 .features .row ul:last-child{
     padding: 0 2.5% 0 5%;
+}
+.features .row ul p{
+    padding: 1em;
+    line-height: 1.5em;
+    border: 2px #666 solid;
+    position: relative;
+    transition: 1s;
+}
+.features .row ul p::after{
+    content: "";
+    background-color: #e5e5e5;
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 1.5em;
+    right: 0;
+    transition: 1.5s;
+}
+.features .row ul:last-child p::after{
+    left: 0;
+}
+.features ul li:hover p::after{
+    width: 40%;
+}
+.features .row ul:first-child p{
+    border-right: none;
+}
+.features .row ul:last-child p{
+    border-left: none;
+}
+.features ul li:hover p{
+    border-color: blue;
+    background-color: f5f5f5;
+}
+.features ul p::after{
+    content: "";
 }
 .features .row> *{
     display: inline-block;
@@ -61,4 +118,42 @@ ul{
     width: 70%;
     background-color: #555;
     margin: 0 auto;
+}
+@media(max-width: 1500px){
+    .conteiner{
+        width: 84%;
+    }
+}
+@media(max-width: 1100px){
+    .features .row figure{
+        display: none;
+    }
+    .features .row> ul{
+        display: inline-block;
+        width: 40%;
+        vertical-align: top;
+        /* padding: 0!important; */
+    }
+}
+@media(max-width: 900px){
+    .features .row> ul{
+        display: inline-block;
+        width: 100%;
+        vertical-align: top;
+        
+         padding: 1.5em!important; 
+    }
+    .features .row> ul:first-child{
+        text-align: left;
+    }
+    .features .row h3::after{
+        left: -2.5em;
+    }
+    .features .row ul:first-child p{
+        border-right: solid 1px;
+        border-left: none;
+    }
+    .features .row ul p::after{
+        left: 0;
+    }
 }
