--- a/landing copy/navbar.css
+++ b/landing copy/navbar.css
@@ -1,28 +1,37 @@
-@import url(//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css);
 a{
     text-decoration: none;
 }
 .navbar{
-    position: relative;
+    position: fixed;
     background-color: #0054ad;
-    padding: 0 2%;  
+    padding: 0;  
+    width: 100%;
+    height: 80px;
+    top: 0;
+    z-index: 2;
+    text-align: right;
 }
 .navbar a{
     color: #ddd;
     display: inline-block;
-    vertical-align: middle;
     padding: .75em;
     font-size: .75em;
+    margin-top: 2em;
 }
 .navbar a:first-child{
+    position: absolute;
+    left: 1.5em;
+    top: -2em;
     font-family: italic;
     margin-right: 1em;
     font-size: 3em;
     line-height: .1em;
     color: white;
 }
-.navbar a:last-child,
-.more{
+.navbar a:nth-child(10){
+    margin-right: 6em;
+}
+.navbar a:last-child{
     display: none;
 }
 
@@ -40,14 +49,14 @@ a{
         padding-left: 0;
     }
     .navbar a:last-child{
-        position: absolute;
+        position
+        : absolute;
         border: 1px solid #ddd;
         border-radius: 3px;
         width: 1em;
         height: 1em;
         text-align: center;
         right: 10%;
-        top: 2em;
     } 
  
     
