--- a/landing copy/navbar.css
+++ b/landing copy/navbar.css
@@ -6,7 +6,7 @@ a{
     background-color: #0054ad;
     padding: 0;  
     width: 100%;
-    height: 80px;
+    height: 5em;
     top: 0;
     z-index: 2;
     text-align: right;
